...
                            </containerView>
                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JbU-62-13k">
                                <rect key="frame" x="20" y="35" width="335" height="30"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="1000" text="Player X's Turn" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresiz
                                        <rect key="frame" x="0.0" y="0.0" width="232" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="GameViewController.statusLabel"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdE-Mf-pVu">
                                        <rect key="frame" x="240" y="0.0" width="37" height="30"/>
...
                                        <connections>
                                            <action selector="undoTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DnM-P0-GeX"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g3q-lj-0mf">
                                        <rect key="frame" x="285" y="0.0" width="50" height="30"/>
                                        <state key="normal" title="Restart"/>
                                        <connections>
                                            <action selector="restartGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c3U-0D-f14"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                                <subviews>
                                    <stackView opaque="NO" tag="102" contentMode="scaleToFill" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="kNo-MW-d3c">
                                        <rect key="frame" x="0.0" y="0.0" width="256" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGT-Na-II2">
                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                <accessibility key="accessibilityConfiguration" identifier="BoardViewController.button0"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="5XS-uE-JnU"/>
                                                    <constraint firstAttribute="height" constant="60" id="BH7-8T-FXh"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="72"/>
                                                <state key="normal" title="x">
...
